<resources>
    <string name="app_name">Waterfall</string>
    <string name="home_label">Home</string>
    <string name="settings_label">Settings</string>
    <string name="stats_label">More Stats</string>
    <string name="recorder_label">Audio Recorder</string>
    <string name="progress">0%</string>
    <string name="progress_detail">0 oz out of 64 oz</string>
    <string name="home_left_text">0 minutes since last drink</string>
    <string name="home_right_text">0 oz drank on average per day</string>
    <string name="sound_notiftext">Voice</string>
    <string name="phone_notiftext">Phone</string>
    <string name="light_notiftext">Light on Bottle/Base</string>
    <string name="notif_setting_header">Notifications Settings</string>
    <string name="custom_setting_header">Custom Settings</string>
    <string name="time_interval_text">Maximum Time Between Drinks: </string>
    <string name="water_total_text">Ideal Daily Water Consumption: </string>
    <string name="set_button_text">Set Changes</string>
    <string name="default_time_interval">1</string>
    <string name="default_water_total">64</string>
    <string name="time_interval_unit">minute(s)</string>
    <string name="water_total_unit">ounce(s)</string>
    <string name="hourly_header">Hourly</string>
    <string name="daily_header">Daily</string>
    <string name="weekly_header">Weekly</string>
    <string name="monthly_header">Monthly</string>
    <string name="turnOnBT">Turn On Bluetooth</string>
    <string name="turnOffBT">Turn Off Bluetooth</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="CLIENT_CHARACTERISTIC_CONFIG">00002902-0000-1000-8000-00805f9b34fb</string>
    <string name="scan_button">Scan</string>
    <string name="awake_text">When are you awake?</string>
    <string name="dash">to</string>
    <string name="record_start">Start Recording</string>
    <string name="record_stop">Stop Recording</string>
    <string name="play_current">Play Stored Recording</string>
    <string name="stop_current">Stop Stored Recording</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
</resources>
