<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/top_navbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBlue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:orientation="horizontal"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/circle_progress"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:progress="0"
        android:progressDrawable="@drawable/progress_bar_circular"
        android:rotation="-90"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_navbar"
        app:layout_constraintWidth_default="percent" />

    <TextView
        android:id="@+id/text_percent_drank"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/progress"
        android:textSize="60sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/circle_progress"
        app:layout_constraintWidth_default="percent" />

    <TextView
        android:id="@+id/text_fraction_drank"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/progress_detail"
        android:textSize="30sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_percent_drank" />

    <LinearLayout
        android:id="@+id/more_info_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/borders"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_fraction_drank"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5">

        <ImageView
            android:id="@+id/left_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/ic_clock_blue" />

        <TextView
            android:id="@+id/left_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_left_text"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_info_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/borders"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toRightOf="@id/more_info_left"
        app:layout_constraintTop_toBottomOf="@id/text_fraction_drank"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5">

        <ImageView
            android:id="@+id/right_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/ic_drinkcup_blue" />

        <TextView
            android:id="@+id/right_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_right_text"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout

        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_navbar_border"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/more_info_left"
        app:layout_constraintWidth_default="percent">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navbarBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_navbar_border"
            app:menu="@menu/bottom_navigation_menu">


        </android.support.design.widget.BottomNavigationView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
